ai, docs: improve the docs for AI chats

--- a/ai-prompts/component-library/1. Button Component.md
+++ b/ai-prompts/component-library/1. Button Component.md
@@ -1,8 +1,50 @@
 # AI Prompts > Component Library > Button Component
 
-## Prompt 1
+## Overview
 
-> Button, ()[https://daisyui.com/components/button/]
+This document captures my first foray into using ChatGPT-4 + Bing to generate code for a component, related Storybook stories, and tests, for a component representing a Button component from the `daisyUI` `Tailwind` addon.
+
+I was very happy with how this went and was able, after a few additional interactions to get the right code that I wanted, generate code for a component and the supporting files already mentioned.
+
+## Contents
+
+- [AI Prompts \> Component Library \> Button Component](#ai-prompts--component-library--button-component)
+  - [Overview](#overview)
+  - [Contents](#contents)
+  - [Prompt 1 - Initial request](#prompt-1---initial-request)
+    - [Commentary 1](#commentary-1)
+    - [Response 1](#response-1)
+  - [Prompt 2 - Don't use concatenation](#prompt-2---dont-use-concatenation)
+    - [Commentary 2](#commentary-2)
+    - [Response 2](#response-2)
+  - [Prompt 3 - Make some props mutually exlusive](#prompt-3---make-some-props-mutually-exlusive)
+    - [Response 3](#response-3)
+  - [Prompt 4 - Storybook time](#prompt-4---storybook-time)
+    - [Response 4](#response-4)
+  - [Prompt 5 - Use TS and modern format](#prompt-5---use-ts-and-modern-format)
+    - [Response 5](#response-5)
+  - [Prompt 6 - Whoops](#prompt-6---whoops)
+    - [Response 6](#response-6)
+  - [Prompt 7 - Use Storybook example](#prompt-7---use-storybook-example)
+    - [Response 7](#response-7)
+  - [Prompt 8 - Don't use old template format](#prompt-8---dont-use-old-template-format)
+    - [Response 8](#response-8)
+  - [Prompt 9 - Use maps for classes](#prompt-9---use-maps-for-classes)
+    - [Response 9](#response-9)
+  - [Prompt 10 - Tests](#prompt-10---tests)
+    - [Response 10](#response-10)
+  - [Prompt 11 - Test all variants](#prompt-11---test-all-variants)
+    - [Response 11](#response-11)
+  - [Prompt 12 - Update test for other props](#prompt-12---update-test-for-other-props)
+    - [Response 12](#response-12)
+
+## Prompt 1 - Initial request
+
+> Button, https://daisyui.com/components/button/
+
+### Commentary 1
+
+The code initially generated in this response, overall, was excellent! However, in the subsequent prompts after this, it was clear that I had forgotten a few parameters to specify as well as some corrections for the language model (LM).
 
 ### Response 1
 
@@ -63,9 +105,13 @@ Please note that this is a basic implementation and might need further adjustmen
 
 ---
 
-## Prompt 2
+## Prompt 2 - Don't use concatenation
 
 > Instead of using concatenation for building the `className` var, use the excellent `clsx` library and interpolate the values.
+
+### Commentary 2
+
+This would have otherwise been a good response for what I requested, however, I neglected to remember that `Tailwind` doesn't pick up calculated styles, which I had to later correct in [Prompt 9](#prompt-9).
 
 ### Response 2
 
@@ -125,7 +171,7 @@ In this updated version, the `clsx` function takes a series of class strings and
 
 ---
 
-## Prompt 3
+## Prompt 3 - Make some props mutually exlusive
 
 > We're almost there! What you have so far is excellent, however, I would like `outline`, `active`, and `disabled` to be mutually exclusive properties and _not_ part of `variant`
 
@@ -193,7 +239,7 @@ Now, `outline`, `active`, and `disabled` are separate boolean props. If any of t
 
 ---
 
-## Prompt 4
+## Prompt 4 - Storybook time
 
 > Now, I would like you to generate a Storybook story for this component. Please use the link that I provided you with earlier to generate stories based on how the documentation was presented on the `daisyUI` website. Create a story for each section in the documentation that uses the component we just built.
 
@@ -408,7 +454,7 @@ export const
 
 ---
 
-## Prompt 5
+## Prompt 5 - Use TS and modern format
 
 > Actually, let's use TypeScript for this instead.
 >
@@ -591,15 +637,17 @@ export interface ButtonProps {
 
 ---
 
-## Prompt 6
+## Prompt 6 - Whoops
 
 > I've overlooked an important aspect of this. Please ignore everything that I just said in regard to creating storybook stories and I will work on another prompt to give you for this task.
 
 ### Response 6
 
+Of course! Feel free to provide any other instructions or new tasks when you're ready. I'm here to help.
+
 ---
 
-## Prompt 7
+## Prompt 7 - Use Storybook example
 
 > I would like you to create stories for this new button component. Just to remind you, this is the code that we created:
 
@@ -832,7 +880,7 @@ In this code, we first define the metadata for our Button component. We then cre
 
 ---
 
-## Prompt 8
+## Prompt 8 - Don't use old template format
 
 > Please don't use `const Template...` and instead follow the example. Use
 
@@ -981,7 +1029,7 @@ With this approach, we define each story as an object with the necessary `args` 
 
 ---
 
-## Prompt 9
+## Prompt 9 - Use maps for classes
 
 > I would like you take the following component and refactor how the classes are built.
 >
@@ -1143,7 +1191,7 @@ This approach ensures that you are using fully-qualified class names, which shou
 
 ---
 
-## Prompt 10
+## Prompt 10 - Tests
 
 > Now I would like you to generate some tests for the following component using the default testing facilities that are available in Next JS applications:
 
@@ -1313,7 +1361,7 @@ Remember to adjust the import path of the `Button` component based on your proje
 
 ---
 
-## Prompt 11
+## Prompt 11 - Test all variants
 
 > Create some additional tests that test each one of the possible variant values
 
@@ -1355,7 +1403,7 @@ This is a much more scalable approach than creating a separate test for each var
 
 ---
 
-## Prompt 12
+## Prompt 12 - Update test for other props
 
 > I have updated a few things in that test. I will paste the code below, and then I would like you to take the code and adapt it for several other properties. Please ignore the code associated with `isGlass` in the other tests.
 >
