ai, chore: committing prior work that was part of a now defunct effort to generate React components. I've now taken a much better approach, so this is now legacy work. Preserving for my own dev-posterity so I have a log of my efforts in using AI for such tasks

--- a/ai-prompts/component-library/1. Button.md
+++ b/ai-prompts/component-library/1. Button.md
@@ -1,4 +1,37 @@
-# AI Prompts > Component Library > Button Component
+# AI Prompts > Component Library > Button
+
+## Contents
+
+- [AI Prompts \> Component Library \> Button](#ai-prompts--component-library--button)
+  - [Contents](#contents)
+  - [Overview](#overview)
+  - [Prompts](#prompts)
+    - [Prompt 1 - Initial request](#prompt-1---initial-request)
+      - [Commentary 1](#commentary-1)
+      - [Response 1](#response-1)
+    - [Prompt 2 - Don't use concatenation](#prompt-2---dont-use-concatenation)
+      - [Commentary 2](#commentary-2)
+      - [Response 2](#response-2)
+    - [Prompt 3 - Make some props mutually exlusive](#prompt-3---make-some-props-mutually-exlusive)
+      - [Response 3](#response-3)
+    - [Prompt 4 - Storybook time](#prompt-4---storybook-time)
+      - [Response 4](#response-4)
+    - [Prompt 5 - Use TS and modern format](#prompt-5---use-ts-and-modern-format)
+      - [Response 5](#response-5)
+    - [Prompt 6 - Whoops](#prompt-6---whoops)
+      - [Response 6](#response-6)
+    - [Prompt 7 - Use Storybook example](#prompt-7---use-storybook-example)
+      - [Response 7](#response-7)
+    - [Prompt 8 - Don't use old template format](#prompt-8---dont-use-old-template-format)
+      - [Response 8](#response-8)
+    - [Prompt 9 - Use maps for classes](#prompt-9---use-maps-for-classes)
+      - [Response 9](#response-9)
+    - [Prompt 10 - Tests](#prompt-10---tests)
+      - [Response 10](#response-10)
+    - [Prompt 11 - Test all variants](#prompt-11---test-all-variants)
+      - [Response 11](#response-11)
+    - [Prompt 12 - Update test for other props](#prompt-12---update-test-for-other-props)
+      - [Response 12](#response-12)
 
 ## Overview
 
@@ -6,47 +39,17 @@ This document captures my first foray into using ChatGPT-4 + Bing to generate co
 
 I was very happy with how this went and was able, after a few additional interactions to get the right code that I wanted, generate code for a component and the supporting files already mentioned.
 
-## Contents
+## Prompts
 
-- [AI Prompts \> Component Library \> Button Component](#ai-prompts--component-library--button-component)
-  - [Overview](#overview)
-  - [Contents](#contents)
-  - [Prompt 1 - Initial request](#prompt-1---initial-request)
-    - [Commentary 1](#commentary-1)
-    - [Response 1](#response-1)
-  - [Prompt 2 - Don't use concatenation](#prompt-2---dont-use-concatenation)
-    - [Commentary 2](#commentary-2)
-    - [Response 2](#response-2)
-  - [Prompt 3 - Make some props mutually exlusive](#prompt-3---make-some-props-mutually-exlusive)
-    - [Response 3](#response-3)
-  - [Prompt 4 - Storybook time](#prompt-4---storybook-time)
-    - [Response 4](#response-4)
-  - [Prompt 5 - Use TS and modern format](#prompt-5---use-ts-and-modern-format)
-    - [Response 5](#response-5)
-  - [Prompt 6 - Whoops](#prompt-6---whoops)
-    - [Response 6](#response-6)
-  - [Prompt 7 - Use Storybook example](#prompt-7---use-storybook-example)
-    - [Response 7](#response-7)
-  - [Prompt 8 - Don't use old template format](#prompt-8---dont-use-old-template-format)
-    - [Response 8](#response-8)
-  - [Prompt 9 - Use maps for classes](#prompt-9---use-maps-for-classes)
-    - [Response 9](#response-9)
-  - [Prompt 10 - Tests](#prompt-10---tests)
-    - [Response 10](#response-10)
-  - [Prompt 11 - Test all variants](#prompt-11---test-all-variants)
-    - [Response 11](#response-11)
-  - [Prompt 12 - Update test for other props](#prompt-12---update-test-for-other-props)
-    - [Response 12](#response-12)
-
-## Prompt 1 - Initial request
+### Prompt 1 - Initial request
 
 > Button, https://daisyui.com/components/button/
 
-### Commentary 1
+#### Commentary 1
 
 The code initially generated in this response, overall, was excellent! However, in the subsequent prompts after this, it was clear that I had forgotten a few parameters to specify as well as some corrections for the language model (LM).
 
-### Response 1
+#### Response 1
 
 Based on the documentation provided, here's a potential implementation for a `Button` component using `React` and `TypeScript`:
 
@@ -105,15 +108,15 @@ Please note that this is a basic implementation and might need further adjustmen
 
 ---
 
-## Prompt 2 - Don't use concatenation
+### Prompt 2 - Don't use concatenation
 
 > Instead of using concatenation for building the `className` var, use the excellent `clsx` library and interpolate the values.
 
-### Commentary 2
+#### Commentary 2
 
 This would have otherwise been a good response for what I requested, however, I neglected to remember that `Tailwind` doesn't pick up calculated styles, which I had to later correct in [Prompt 9](#prompt-9).
 
-### Response 2
+#### Response 2
 
 Sure, we can use the `clsx` library to construct the `className` more cleanly. If you don't have it installed, you can add it to your project with `npm install clsx` or `yarn add clsx`. Here's how the revised `Button` component looks:
 
@@ -171,11 +174,11 @@ In this updated version, the `clsx` function takes a series of class strings and
 
 ---
 
-## Prompt 3 - Make some props mutually exlusive
+### Prompt 3 - Make some props mutually exlusive
 
 > We're almost there! What you have so far is excellent, however, I would like `outline`, `active`, and `disabled` to be mutually exclusive properties and _not_ part of `variant`
 
-### Response 3
+#### Response 3
 
 Understood! We can treat `outline`, `active`, and `disabled` as separate, mutually exclusive boolean props. Here's the updated `Button` component:
 
@@ -239,11 +242,11 @@ Now, `outline`, `active`, and `disabled` are separate boolean props. If any of t
 
 ---
 
-## Prompt 4 - Storybook time
+### Prompt 4 - Storybook time
 
 > Now, I would like you to generate a Storybook story for this component. Please use the link that I provided you with earlier to generate stories based on how the documentation was presented on the `daisyUI` website. Create a story for each section in the documentation that uses the component we just built.
 
-### Response 4
+#### Response 4
 
 Here are the Storybook stories for the `Button` component based on the `daisyUI` documentation:
 
@@ -454,7 +457,7 @@ export const
 
 ---
 
-## Prompt 5 - Use TS and modern format
+### Prompt 5 - Use TS and modern format
 
 > Actually, let's use TypeScript for this instead.
 >
@@ -511,7 +514,7 @@ export const Small: Story = {
 };
 ```
 
-### Response 5
+#### Response 5
 
 Absolutely, you can use TypeScript with Storybook to get static type checking and intelligent code completion. Here is how you can reformat the Storybook stories for the `Button` component using TypeScript:
 
@@ -637,17 +640,17 @@ export interface ButtonProps {
 
 ---
 
-## Prompt 6 - Whoops
+### Prompt 6 - Whoops
 
 > I've overlooked an important aspect of this. Please ignore everything that I just said in regard to creating storybook stories and I will work on another prompt to give you for this task.
 
-### Response 6
+#### Response 6
 
 Of course! Feel free to provide any other instructions or new tasks when you're ready. I'm here to help.
 
 ---
 
-## Prompt 7 - Use Storybook example
+### Prompt 7 - Use Storybook example
 
 > I would like you to create stories for this new button component. Just to remind you, this is the code that we created:
 
@@ -760,7 +763,7 @@ export const Small: Story = {
 };
 ```
 
-### Response 7
+#### Response 7
 
 I understand your request. You want to create Storybook stories for your new Button component, following the template that Storybook initially generated. You want to create a story for each of the variants and another set of stories for each of the other props including `active`, `outline`, and `size`. Here is how you can accomplish this:
 
@@ -880,7 +883,7 @@ In this code, we first define the metadata for our Button component. We then cre
 
 ---
 
-## Prompt 8 - Don't use old template format
+### Prompt 8 - Don't use old template format
 
 > Please don't use `const Template...` and instead follow the example. Use
 
@@ -891,7 +894,7 @@ type Story = StoryObj<typeof Button>;
 
 > instead
 
-### Response 8
+#### Response 8
 
 I see, you prefer to use the template from the initial Storybook generation. Here's how you can write your stories:
 
@@ -1029,7 +1032,7 @@ With this approach, we define each story as an object with the necessary `args` 
 
 ---
 
-## Prompt 9 - Use maps for classes
+### Prompt 9 - Use maps for classes
 
 > I would like you take the following component and refactor how the classes are built.
 >
@@ -1095,7 +1098,7 @@ const Button: React.FC<ButtonProps> = ({
 export default Button;
 ```
 
-### Response 9
+#### Response 9
 
 Certainly, to ensure that Tailwind CSS can purge unused styles effectively, it's important to avoid constructing class names dynamically. Here's how you can refactor your component to use a key-value map for your class names:
 
@@ -1191,7 +1194,7 @@ This approach ensures that you are using fully-qualified class names, which shou
 
 ---
 
-## Prompt 10 - Tests
+### Prompt 10 - Tests
 
 > Now I would like you to generate some tests for the following component using the default testing facilities that are available in Next JS applications:
 
@@ -1282,7 +1285,7 @@ const shapeClasses = {
 };
 ```
 
-### Response 10
+#### Response 10
 
 Next.js applications typically use Jest and React Testing Library for unit testing. Here's an example of how you might write tests for the `Button` component using these libraries:
 
@@ -1361,11 +1364,11 @@ Remember to adjust the import path of the `Button` component based on your proje
 
 ---
 
-## Prompt 11 - Test all variants
+### Prompt 11 - Test all variants
 
 > Create some additional tests that test each one of the possible variant values
 
-### Response 11
+#### Response 11
 
 Sure, here are some additional tests to check that the button renders with the correct class for each variant:
 
@@ -1403,7 +1406,7 @@ This is a much more scalable approach than creating a separate test for each var
 
 ---
 
-## Prompt 12 - Update test for other props
+### Prompt 12 - Update test for other props
 
 > I have updated a few things in that test. I will paste the code below, and then I would like you to take the code and adapt it for several other properties. Please ignore the code associated with `isGlass` in the other tests.
 >
@@ -1438,7 +1441,7 @@ describe("Button variants", () => {
 });
 ```
 
-### Response 12
+#### Response 12
 
 Absolutely, here's how you can adapt the same structure for the `size` and `shape` props:
 
